# mkdocs-variable-randomizer-plugin

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  setup.cfg
docs/: index.md
src/mkdocs_variable_randomizer_plugin/: __init__.py
