[project]
name = "mkdocs-variable-randomizer-plugin"
version = "0.0.1"
authors = [
  { name="six-two", email="pip@six-two.dev" },
]
description = "Replace some variables in snippets with random names"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/six-two/mkdocs-variable-randomizer-plugin"
Issues = "https://github.com/six-two/mkdocs-variable-randomizer-plugin/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
