[metadata]
name = mkdocs-variable-randomizer-plugin
version = 0.0.1
author = six-two
author_email = pip@six-two.dev
description = Replace placeholders in snippets with random values
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/six-two/mkdocs-variable-randomizer-plugin
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
scripts =
install_requires =
    mkdocs>=1.5.0 # Needed for mkdocs.plugins.get_plugin_logger

[options.entry_points]
mkdocs.plugins =
    variable_randomizer = mkdocs_variable_randomizer_plugin:VariableRandomizerPlugin

[options.packages.find]
where = src
